Fixed tooltip position in case xAlign center

--- a/app/client/ui/Chart/ChartTooltip/ChartTooltip.module.scss
+++ b/app/client/ui/Chart/ChartTooltip/ChartTooltip.module.scss
@@ -1,14 +1,17 @@
 .tooltip {
   position: absolute;
   pointer-events: none;
-  padding: 4px;
+  padding-left: 16px;
+  padding-right: 16px;
   max-width: 200px;
   right: calc(1px * var(--tooltip-offset));
 
   @media (max-width: 767px) {
-    max-width: 150px;
+    max-width: 180px;
     right: auto;
     left: 15px;
+    padding-left: 8px;
+    padding-right: 8px;
   }
 }
 
